2004-05-14 Ian Rutt
 * Added output-masking capability to enable overlapping domains to be
	more easily dealt with.
 * Fixed polar stereographic projection. However, the stereographic
	projections still fail if the pole is in the domain - not sure why.
 * Implemented new, better downscaling-interpolation scheme, which handles
	the presence of a pole better, and take into account the irregular
	shape of the interpolation domain.

2004-05-12 Ian Rutt
 * Removed redundant re_alloc flag argument from proj_allocate subroutine
	in glimmer_project.f90

2004-05-11 Ian Rutt
 * Removed redundant xscale and yscale components from projection type, 
	which were originally set equal to dx and dy. All references to
	them have been changed accordingly.

2004-05-06 Ian Rutt
 * Rationalisation of calc_coverage (glimmer_object.f90), with 
	global grid objects.
 * Minor formatting changes.
 * Completed adding initialisation to derived types and rejigging
	namelist reads to avoid confusion about default values.
 * Coded alternative, hopefully faster calc_coverage routine.
 * Made efficiency alterations to new_upscale code.
 * Duplicated mean_to_global (glimmer_interp.f90) in single and
	double precision copies (in terms of array local) and
	added appropriate aliasing interface block. This was to
	allow the addition of a compile flag to invoke a single-precision
	interface (compile with GLIMMER_SP defined).
 * Corrected error in GMT code - sines and cosines being taken without 
	converting from degrees to radians!

2004-05-05 Ian Rutt
 * Realised several crucial aspects of the orography output were
	missing, so added them. Produces orography as expected now,
	but some structural changes are needed, I think.
 * Restructured code so that global grid definitions have their own 
	derived type, which simplifies things. However, more rationalisation 
	and simplification still possible
 * Minor formatting, and removal of redundant stress arrays

2004-05-04 Ian Rutt